# SamWhispers

./: .gitignore  AGENTS.md  Makefile  README.md  config.example.toml  pyproject.toml  samwhispers-wsl.sh  samwhispers.bat  samwhispers.sh
docs/: ROADMAP.md  STARTUP.md  TEST_PLAN.md
docs/plan/: samwhispers_v1_voice_to_text_daemon.md
docs/plans/: 260422_KEY_NAME_DETECTION_UTILITY.md  260423_TRANSCRIPTION_POSTPROCESSING_NEWLINE_CLEANUP.md  bundle_whisper_cpp_server_subprocess_management.md  code_review_260325_fixes.md  (+1 more)
memory/: MEMORY.md
packaging/systemd/: samwhispers.service
plans/: 250423_ACCENT_BIAS_PROMPT_CONDITIONING.md  250423_CUSTOM_VOCABULARY_AND_FILLER_REMOVAL.md  260613_FULL_RESTART_LIFECYCLE.md  260613_PRODUCTION_STABILIZATION_ERROR_VISIBILITY.md  260614_INSTANT_RECORDING_AND_TASKBAR_ICON_FIX.md  260614_SNIPPETS_AND_VAD.md  260614_THREAD_SAFETY_AND_STREAMING_PERFORMANCE_FIXES.md  260616_RUNTIME_HARDENING_AND_UI_RELIABILITY.md  260616_WHISPER_STREAMING_SENTENCE_BOUNDARY_TRIMMING.md  260617_HF_MODEL_DISCOVERY_AND_MANIFEST_FIX.md  260706_WEBUI_CONFIG_FIXES.md  ROADMAP.md
scripts/: keyname.py
tests/: test_app.py  test_audio.py  test_autostart.py  test_bootstrap.py  test_cleanup.py  test_config.py  test_history.py  test_hotkeys.py  test_inject.py  test_integration.py  test_main.py  test_model_manifest.py  test_models.py  test_notify.py  test_overlay.py  test_postprocess.py  test_runtime.py  test_server.py  test_singleinstance.py  test_streaming.py  test_supervisor.py  test_transcribe.py  test_translate.py  test_webconfig.py  test_webserver.py  test_wsl.py
(+49 files in other folders)
