[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "samwhispers"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4",
    "numpy>=1.24",
    "pynput>=1.7",
    "httpx>=0.27",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "respx>=0.21", "mypy>=1.8", "ruff>=0.3"]

[project.scripts]
samwhispers = "samwhispers.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
